made the page become rows instead of columns when shrunk down and made our links to our github accounts on the bottom of the page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles.css">
   </head>
 
-  <body class="is-flex-mobile is-flex-shrink-2">
+  <body>
 
   
     <header class="column is-flex-direction-column is-fullheight has-text-centered is-mobile has-background-primary">
@@ -17,9 +17,9 @@
       </h1>
     </header>
    
-<main>
+<main class="is-flex is-flex-direction-row" >
 
-    <section class="section is-flex-direction-column is-mobile" style="height:375px">
+    <section class="section is-flex-direction-column is-mobile"  style="height:375px">
 
         <div class="has-text-centered">
             <h2 class="title is-3">
@@ -39,7 +39,10 @@
   <footer class="column is-narrow has-text-centered has-background-primary is-mobile is is-flex-shrink-2">
     <div>
         <p>
-            Made by Tom, Branden, and Ryan
+          Created by:
+          <a href="https://github.com/Tomjp424" target="_blank">Thomas</a>
+          <a href="https://github.com/CamBC-Lab" target="_blank">Branden</a>
+          <a href="https://github.com/pauletters" target="_blank">Ryan</a>
         </p>
     </div>
   </footer>
